refactor: cleanup CSS, mobile-optimize all pages, add Pricing/About/Resources

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <span>AdYogi</span>
             </a>
             <div class="nav-links" id="nav-links">
-                <a href="#how-it-works">How It Works</a>
                 <a href="#solutions">Solutions</a>
-                <a href="#product">Product</a>
-                <a href="#testimonials">Results</a>
+                <a href="pricing.html">Pricing</a>
+                <a href="resources.html">Resources</a>
+                <a href="about.html">About Us</a>
             </div>
             <a href="#demo" class="btn btn-primary btn-glow nav-cta">Book a Demo</a>
             <button class="mobile-menu-btn" id="menu-toggle" aria-label="Toggle menu"><i
@@ -46,8 +46,9 @@
         <div class="mobile-drawer" id="mobile-drawer">
             <a href="#how-it-works" class="drawer-link">How It Works</a>
             <a href="#solutions" class="drawer-link">Solutions</a>
-            <a href="#product" class="drawer-link">Product</a>
-            <a href="#testimonials" class="drawer-link">Results</a>
+            <a href="pricing.html" class="drawer-link">Pricing</a>
+            <a href="resources.html" class="drawer-link">Resources</a>
+            <a href="about.html" class="drawer-link">About Us</a>
             <a href="#demo" class="btn btn-primary btn-full drawer-cta">Book a Demo</a>
         </div>
     </nav>
@@ -490,12 +491,36 @@
                 </div>
                 <div class="faq-item">
                     <button class="faq-question">
-                        <span>Do I get a dedicated account manager?</span>
+                        <span>How long does onboarding take?</span>
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Yes! Enterprise and Managed Services clients get a dedicated account manager who handles
-                            strategy, optimization, and reporting for your brand.</p>
+                        <p>Most eCommerce brands are fully integrated and launching automated campaigns within 48 to 72
+                            hours. Our dedicated onboarding team handles the heavy lifting of catalog integration.</p>
+                    </div>
+                </div>
+                <!-- New FAQ Items -->
+                <div class="faq-item reveal">
+                    <button class="faq-question">
+                        <span>Do I need to fire my ad agency?</span>
+                        <i class="ph ph-caret-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Not at all! Many of our clients use AdYogi alongside their existing agencies. We provide the
+                            technical automation and smart catalog structure, freeing up your agency to focus purely on
+                            creative strategy and high-level growth planning.</p>
+                    </div>
+                </div>
+                <div class="faq-item reveal">
+                    <button class="faq-question">
+                        <span>How does the Smart Catalog differ from native catalogs?</span>
+                        <i class="ph ph-caret-down"></i>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Native platforms (like Meta's Commerce Manager) strictly accept basic fields. Our Smart
+                            Catalog injects dynamic data like margin, inventory velocity, and predictive conversion
+                            rates into hidden custom labels, allowing our bidding engine to prioritize high-margin
+                            products automatically.</p>
                     </div>
                 </div>
             </div>
@@ -542,18 +567,99 @@
                 </form>
             </div>
         </div>
-        <div class="container footer-bottom">
-            <div class="footer-brand">
-                <a href="#" class="logo">
+    </footer>
+    <!-- Main Footer -->
+    <footer class="footer">
+        <!-- New Multi-Column Links Area -->
+        <div class="container footer-links-grid"
+            style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 3rem; margin-bottom: 4rem; text-align: left;">
+            <div class="footer-col" style="grid-column: 1 / -1; max-width: 300px;">
+                <a href="#" class="logo" style="margin-bottom: 1rem; display: inline-flex;">
                     <i class="ph-fill ph-infinity"></i>
                     <span>AdYogi</span>
                 </a>
+                <p style="color: var(--text-muted); font-size: 0.9rem; line-height: 1.6;">The AI-powered growth engine
+                    for ambitious eCommerce and D2C brands.</p>
+            </div>
+
+            <div class="footer-col">
+                <h4 style="font-size: 0.95rem; margin-bottom: 1rem; color: var(--text-main);">Product</h4>
+                <ul style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <li><a href="#how-it-works"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">How it
+                            Works</a></li>
+                    <li><a href="#solutions"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Solutions</a>
+                    </li>
+                    <li><a href="pricing.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Pricing</a>
+                    </li>
+                    <li><a href="#"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Integrations</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4 style="font-size: 0.95rem; margin-bottom: 1rem; color: var(--text-main);">Resources</h4>
+                <ul style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <li><a href="resources.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Case
+                            Studies</a></li>
+                    <li><a href="resources.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Help Center</a>
+                    </li>
+                    <li><a href="resources.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">eCommerce
+                            Blog</a></li>
+                    <li><a href="resources.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Webinars</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4 style="font-size: 0.95rem; margin-bottom: 1rem; color: var(--text-main);">Company</h4>
+                <ul style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <li><a href="about.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">About Us</a>
+                    </li>
+                    <li><a href="about.html"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Careers</a>
+                    </li>
+                    <li><a href="#" style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Partner
+                            Program</a></li>
+                    <li><a href="#demo"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Contact
+                            Sales</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4 style="font-size: 0.95rem; margin-bottom: 1rem; color: var(--text-main);">Legal</h4>
+                <ul style="display: flex; flex-direction: column; gap: 0.75rem;">
+                    <li><a href="#" style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Privacy
+                            Policy</a></li>
+                    <li><a href="#" style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Terms
+                            of Service</a></li>
+                    <li><a href="#" style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Cookie
+                            Policy</a></li>
+                    <li><a href="#"
+                            style="color: var(--text-muted); font-size: 0.9rem; transition: color 0.3s;">Security</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container footer-bottom">
+            <div class="footer-brand">
                 <p>&copy; 2026 AdYogi. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="ph-fill ph-instagram-logo"></i></a>
                 <a href="#"><i class="ph-fill ph-facebook-logo"></i></a>
                 <a href="#"><i class="ph-fill ph-linkedin-logo"></i></a>
+                <a href="#"><i class="ph-fill ph-twitter-logo"></i></a>
                 <a href="#"><i class="ph-fill ph-youtube-logo"></i></a>
             </div>
         </div>
