fix(styles): add margin-top to integration-logos to fix overlap with hero-ctas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AdYogi | Scale Your eCommerce Ads Profitably</title>
+    <title>BrandBiography | Scale Your eCommerce Ads Profitably</title>
     <meta name="description"
         content="Supercharge your Meta, Google, and Marketplace Ads for maximum returns with an AI-powered smart catalog and product-level automations.">
     <link rel="icon"
@@ -29,8 +29,8 @@
     <nav class="navbar" id="navbar">
         <div class="container nav-content">
             <a href="#" class="logo">
-                <i class="ph-fill ph-infinity"></i>
-                <span>AdYogi</span>
+                <i class="ph-fill ph-book-open-text"></i>
+                <span>BrandBiography</span>
             </a>
             <div class="nav-links" id="nav-links">
                 <a href="#solutions">Solutions</a>
@@ -88,7 +88,7 @@
                         <div class="title">Performance Overview</div>
                     </div>
                     <div class="board-body">
-                        <img src="assets/dashboard_mockup.png" alt="AdYogi Dashboard Mockup" class="mockup-img"
+                        <img src="assets/dashboard_mockup.png" alt="BrandBiography Dashboard Mockup" class="mockup-img"
                             id="hero-mockup">
                     </div>
                 </div>
@@ -370,7 +370,7 @@
             </div>
             <div class="enterprise-content">
                 <h2 class="section-title">Are You An Enterprise Brand Looking To Outsource Ad Operations?</h2>
-                <p>Sign up for Adyogi Managed Services and get access to a dedicated Account Manager for your brand.</p>
+                <p>Sign up for BrandBiography Managed Services and get access to a dedicated Account Manager for your brand.</p>
                 <ul class="check-list">
                     <li><i class="ph-fill ph-check-circle text-red"></i> Stop bleeding money and time on unoptimized Ads
                     </li>
@@ -388,7 +388,7 @@
     <section class="testimonials-section reveal" id="testimonials">
         <div class="container text-center">
             <h2 class="section-title">Don't Take Our Word For It</h2>
-            <p class="section-subtitle">Hear from fellow eCommerce founders scaling with AdYogi.</p>
+            <p class="section-subtitle">Hear from fellow eCommerce founders scaling with BrandBiography.</p>
             <div class="testimonial-grid">
                 <div class="testimonial-card glass-panel">
                     <div class="stars">
@@ -397,7 +397,7 @@
                             class="ph-fill ph-star text-red"></i>
                     </div>
                     <p class="quote">"We wrapped up the first quarter on a high note, and we want to express our
-                        gratitude to the Adyogi team. This is just the start!"</p>
+                        gratitude to the BrandBiography team. This is just the start!"</p>
                     <div class="author">
                         <div class="avatar">DG</div>
                         <div class="author-info">
@@ -413,7 +413,7 @@
                             class="ph-fill ph-star text-red"></i>
                     </div>
                     <p class="quote">"It's been an absolute game-changer. Managing campaigns on Amazon can be daunting,
-                        but Adyogi has made it so much easier with prompt support."</p>
+                        but BrandBiography has made it so much easier with prompt support."</p>
                     <div class="author">
                         <div class="avatar">AU</div>
                         <div class="author-info">
@@ -428,7 +428,7 @@
                             class="ph-fill ph-star text-red"></i><i class="ph-fill ph-star text-red"></i><i
                             class="ph-fill ph-star text-red"></i>
                     </div>
-                    <p class="quote">"Within 90 days our ROAS went from 2.1 to 4.8. Adyogi's product-level automation is
+                    <p class="quote">"Within 90 days our ROAS went from 2.1 to 4.8. BrandBiography's product-level automation is
                         unlike anything else on the market. Highly recommended."</p>
                     <div class="author">
                         <div class="avatar">RS</div>
@@ -451,11 +451,11 @@
             <div class="faq-list">
                 <div class="faq-item">
                     <button class="faq-question">
-                        <span>What ad platforms does AdYogi support?</span>
+                        <span>What ad platforms does BrandBiography support?</span>
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>AdYogi supports Meta (Facebook & Instagram), Google Ads, Amazon Ads, Flipkart, Myntra,
+                        <p>BrandBiography supports Meta (Facebook & Instagram), Google Ads, Amazon Ads, Flipkart, Myntra,
                             Blinkit, Zepto, TikTok, and Walmart. We connect with all major eCommerce platforms.</p>
                     </div>
                 </div>
@@ -481,11 +481,11 @@
                 </div>
                 <div class="faq-item">
                     <button class="faq-question">
-                        <span>Can I use AdYogi with my existing ad accounts?</span>
+                        <span>Can I use BrandBiography with my existing ad accounts?</span>
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Absolutely. AdYogi connects to your existing Meta, Google, and Marketplace ad accounts. We
+                        <p>Absolutely. BrandBiography connects to your existing Meta, Google, and Marketplace ad accounts. We
                             don't require you to start fresh — we optimize what you already have.</p>
                     </div>
                 </div>
@@ -506,7 +506,7 @@
                         <i class="ph ph-caret-down"></i>
                     </button>
                     <div class="faq-answer">
-                        <p>Not at all! Many of our clients use AdYogi alongside their existing agencies. We provide the
+                        <p>Not at all! Many of our clients use BrandBiography alongside their existing agencies. We provide the
                             technical automation and smart catalog structure, freeing up your agency to focus purely on
                             creative strategy and high-level growth planning.</p>
                     </div>
@@ -575,8 +575,8 @@
             style="display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 3rem; margin-bottom: 4rem; text-align: left;">
             <div class="footer-col" style="grid-column: 1 / -1; max-width: 300px;">
                 <a href="#" class="logo" style="margin-bottom: 1rem; display: inline-flex;">
-                    <i class="ph-fill ph-infinity"></i>
-                    <span>AdYogi</span>
+                    <i class="ph-fill ph-book-open-text"></i>
+                    <span>BrandBiography</span>
                 </a>
                 <p style="color: var(--text-muted); font-size: 0.9rem; line-height: 1.6;">The AI-powered growth engine
                     for ambitious eCommerce and D2C brands.</p>
@@ -653,7 +653,7 @@
 
         <div class="container footer-bottom">
             <div class="footer-brand">
-                <p>&copy; 2026 AdYogi. All rights reserved.</p>
+                <p>&copy; 2026 BrandBiography. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="ph-fill ph-instagram-logo"></i></a>
