--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pricing | AdYogi</title>
+    <title>Pricing | BrandBiography</title>
     <meta name="description" content="Simple, transparent pricing tailored for your eCommerce growth stage.">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>∞</text></svg>">
@@ -25,7 +25,7 @@
 
     <nav class="navbar" id="navbar">
         <div class="container nav-content">
-            <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
+            <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
             <div class="nav-links">
                 <a href="index.html#solutions">Solutions</a>
                 <a href="pricing.html" class="active-page">Pricing</a>
@@ -166,8 +166,8 @@
     <footer class="footer">
         <div class="container footer-bottom">
             <div class="footer-brand">
-                <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
-                <p>&copy; 2026 AdYogi. All rights reserved.</p>
+                <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
+                <p>&copy; 2026 BrandBiography. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="ph-fill ph-instagram-logo"></i></a>
