--- a/resources.html
+++ b/resources.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources & Case Studies | AdYogi</title>
-    <meta name="description" content="Case studies, guides, and playbooks to scale your eCommerce brand with AdYogi.">
+    <title>Resources & Case Studies | BrandBiography</title>
+    <meta name="description" content="Case studies, guides, and playbooks to scale your eCommerce brand with BrandBiography.">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>∞</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
 
     <nav class="navbar" id="navbar">
         <div class="container nav-content">
-            <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
+            <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
             <div class="nav-links">
                 <a href="index.html#solutions">Solutions</a>
                 <a href="pricing.html">Pricing</a>
@@ -101,7 +101,7 @@
                 <div class="resource-content">
                     <span class="resource-tag">Case Study</span>
                     <h3>Scaling B2B SaaS Leads with Smart Bidding</h3>
-                    <p>How Acme Corp used AdYogi's custom bid automation rules to reduce Google Ads CPA by 34%.</p>
+                    <p>How Acme Corp used BrandBiography's custom bid automation rules to reduce Google Ads CPA by 34%.</p>
                     <a href="#" class="read-more">Read Story <i class="ph ph-arrow-right"></i></a>
                 </div>
             </div>
@@ -134,8 +134,8 @@
     <footer class="footer">
         <div class="container footer-bottom">
             <div class="footer-brand">
-                <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
-                <p>&copy; 2026 AdYogi. All rights reserved.</p>
+                <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
+                <p>&copy; 2026 BrandBiography. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="ph-fill ph-instagram-logo"></i></a>
