--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | AdYogi</title>
+    <title>About Us | BrandBiography</title>
     <meta name="description" content="Meet the team behind the AI-powered eCommerce ad scaling platform.">
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>∞</text></svg>">
@@ -25,7 +25,7 @@
 
     <nav class="navbar" id="navbar">
         <div class="container nav-content">
-            <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
+            <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
             <div class="nav-links">
                 <a href="index.html#solutions">Solutions</a>
                 <a href="pricing.html">Pricing</a>
@@ -49,7 +49,7 @@
     <header class="about-hero container reveal">
         <div class="badge"><span class="badge-dot"></span> Our Mission</div>
         <h1 class="display-heading">Democratizing <span class="gradient-text">Performance</span> Marketing</h1>
-        <p>We built AdYogi because we believe every eCommerce brand deserves access to the same hyper-efficient,
+        <p>We built BrandBiography because we believe every eCommerce brand deserves access to the same hyper-efficient,
             AI-driven ad tech that the market giants use.</p>
     </header>
 
@@ -86,11 +86,11 @@
                 <p>We set out to turn those manual spreadsheets into a living, breathing software brain — algorithms
                     that automatically ingest massive product feeds, assign budgets locally, and kill underperforming
                     ads silently in the night.</p>
-                <p>Today, AdYogi forms the backbone of digital revenue for over 350 D2C, B2B, and Enterprise marketplace
+                <p>Today, BrandBiography forms the backbone of digital revenue for over 350 D2C, B2B, and Enterprise marketplace
                     brands across 15 countries.</p>
             </div>
             <div class="story-visual">
-                <img class="story-image" src="assets/dashboard_mockup.png" alt="AdYogi Platform">
+                <img class="story-image" src="assets/dashboard_mockup.png" alt="BrandBiography Platform">
             </div>
         </div>
     </section>
@@ -132,8 +132,8 @@
     <footer class="footer">
         <div class="container footer-bottom">
             <div class="footer-brand">
-                <a href="index.html" class="logo"><i class="ph-fill ph-infinity"></i><span>AdYogi</span></a>
-                <p>&copy; 2026 AdYogi. All rights reserved.</p>
+                <a href="index.html" class="logo"><i class="ph-fill ph-book-open-text"></i><span>BrandBiography</span></a>
+                <p>&copy; 2026 BrandBiography. All rights reserved.</p>
             </div>
             <div class="social-links">
                 <a href="#"><i class="ph-fill ph-instagram-logo"></i></a>
