Fix Vercel deployment: added vercel.json, exported Express app, fixed relative paths

--- a/admin/index.html
+++ b/admin/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.7/dist/chart.umd.min.js"></script>
-    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="/admin/admin.css">
 </head>
 
 <body>
@@ -341,7 +341,7 @@
     </div>
 
     <div class="toast" id="toast"></div>
-    <script src="admin.js"></script>
+    <script src="/admin/admin.js"></script>
 </body>
 
 </html>
